--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
     "name": "macros",
     "displayName": "macros",
     "description": "automate repetitive actions with custom macros",
-    "version": "1.2.0",
-    "publisher": "geddski",
-    "repository": "https://github.com/geddski/macros",
+    "version": "0.0.1",
+    "publisher": "ctf0",
+    "repository": "https://github.com/ctf0/macros",
     "engines": {
         "vscode": "^1.5.0"
     },
@@ -19,11 +19,16 @@
         "configuration": {
             "type": "object",
             "title": "Macros configuration",
-            "properties":{
-                "macros":{
-                }
+            "properties": {
+                "macros": {}
             }
-        }
+        },
+        "commands": [
+            {
+                "command": "macros.execute",
+                "title": "Macros: Execute"
+            }
+        ]
     },
     "scripts": {
         "postinstall": "node ./node_modules/vscode/bin/install"
@@ -35,8 +40,5 @@
         "eslint": "^3.6.0",
         "@types/node": "^6.0.40",
         "@types/mocha": "^2.2.32"
-    },
-    "dependencies": {
-        "promise-series": "^1.0.0"
     }
 }
