--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "activationEvents": [
         "*"
     ],
+    "icon": "images/icon.png",
     "main": "./extension",
     "contributes": {
         "configuration": {
